--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,8 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.link %></p>
 <p><%= @post.description %></p>
+<p><%= @post.user.name %></p>
+
 <p><%= link_to "Edit", edit_post_path(@post) %></p>
 <p><%= link_to "Destroy", post_path(@post), method: :delete %></p>
 <p><%= link_to "Home", root_path %></p>
