--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="form">
 <%= simple_form_for @post do |f| %>
   <%= f.input :image %>
   <%= f.input :title %>
@@ -5,3 +6,23 @@
   <%= f.input :description %>
   <%= f.button :submit %>
 <% end %>
+</div>
+
+<style>
+
+body {
+  font-family: 'Market_Deco';
+}
+
+@font-face {
+  font-family: 'Market_Deco';
+  src:url('Market_Deco.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.form {
+  text-align: center;
+}
+
+</style>
