--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+ @font-face {
+   font-family: 'Market_Deco';
+   src:url(font-path('icomoon.ttf')) format('truetype');
+   font-weight: normal;
+   font-style: normal;
+ }
