--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,96 @@
-<h1>Quench The Thirst</h1>
+<ul>
+  <li><a class="active" href="#home">Waterlust</a></li>
+  <li><a href="#shots">Shots</a></li>
+  <li><a href="#about">About</a></li>
+  <li><a href="#support">Support</a></li>
+  <div id="signups">
+    <li><a href="#signup">Sign Up</a></li>
+    <li><a href="#signin">Sign In</a></li>
+  <div>
+</ul>
+
+<ul class="subnav">
+    <li><a href="#popular">Popular</a></li>
+    <li><a href="#vote">Vote</a></li>
+</ul>
+
+<h1>#WATERLUST</h1>
 
 <%= render 'form' %>
 
 <style>
+#signups {
+  float: right;
+}
+
+.quench {
+  text-decoration: none;
+}
+
+body {
+  font-family: 'Market_Deco', sans-serif;
+  text-decoration: none;
+}
+
 h1 {
-font-family: 'Market_Deco', sans-serif;
+  font-family: 'Market_Deco', sans-serif;
+  font-size: 80px;
+  background: -webkit-linear-gradient(50deg, #FFFACD, #FFB4CC 70%, #FFFACD);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+@font-face {
+  font-family: 'Market_Deco';
+  src:url('Market_Deco.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+p {
+  text-align: center;
+  font-family: 'Market_Deco', sans-serif;
+}
+
+ul {
+    font-family: 'Market_Deco', sans-serif;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background: -webkit-linear-gradient(50deg, #A0F1FF, #A0F1FF 70%, #A0F1FF);
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+a:hover:not(.active) {
+    background-color: #white;
+}
+
+.active {
+  background: -webkit-linear-gradient(50deg, #FFFACD, #FFB4CC 70%, #FFFACD);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+}
+
+.subnav {
+  text-align: center;
+  background: -webkit-linear-gradient(50deg, #AFEEEE, #AFEEEE 70%, #AFEEEE);
+}
+
+.footer {
+  text-align: center;
 }
 </style>
