--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.link %></p>
 <p><%= @post.description %></p>
-<p><%= @post.user.name %></p>
+<p><%= @post.user.email %></p>
 
 <p><%= link_to "Edit", edit_post_path(@post) %></p>
 <p><%= link_to "Destroy", post_path(@post), method: :delete %></p>
