--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,28 +1,4 @@
-<ul>
-  <li><a class="active" href="#home">Waterlust</a></li>
-  <li><a href="#shots">Shots</a></li>
-  <li><a href="#about">About</a></li>
-  <li><a href="#support">Support</a></li>
-  <div id="signups">
-    <li><%= link_to "Sign Up", new_user_session_path %></li>
-    <% if user_signed_in? %>
-      <li><%= link_to "Log Out", destroy_user_session_path, method: 'delete' %></li>
-    <% else %>
-      <li><%= link_to "Sign In", new_user_session_path %></li>
-    <% end %>
-    <input type="text" name="search" placeholder="Search">
-  <div>
-</ul>
-
-<ul class="subnav">
-    <li><a href="#popular">Popular</a></li>
-    <li><a href="#vote">Vote</a></li>
-
-</ul>
-<p class="quench"><%= link_to "Upload", new_post_path, class: 'css_class', style: 'text-decoration: none' %></p>
-<h1>#WATERLUST</h1>
-
 <% @posts.each do |post| %>
-  <%= link_to image_tag(post.image.url :small), post_path(post) %>
-  <h2><%= link_to post.title, post_path(post) %></h2>
+<%= link_to image_tag(post.image.url :small), post_path(post) %>
+<%= link_to post.title, post_path(post) %>
 <% end %>
