--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,3 +2,9 @@
 <%= link_to image_tag(post.image.url :small), post_path(post) %>
 <%= link_to post.title, post_path(post) %>
 <% end %>
+
+<div class="row">
+    <div class="col-md-4" style="background-color:aquamarine">.col-md-4</div>
+    <div class="col-md-4" style="background-color:pink">.col-md-4</div>
+    <div class="col-md-4" style="background-color:yellow">.col-md-4</div>
+</div>
