--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,9 +3,6 @@
 <p><%= @post.link %></p>
 <p><%= @post.description %></p>
 <p><%= @post.user.name %></p>
-<!-- <p><%= @post.user_id %></p>
-<p><%= @post.user %></p> -->
 
 <p><%= link_to "Edit", edit_post_path(@post) %></p>
-<p><%= link_to "Destroy", post_path(@post), method: :delete %></p>
-<p><%= link_to "Home", root_path %></p>
+<p><%= link_to "Delete", post_path(@post), method: :delete %></p>
