--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,17 @@
-<% @posts.each do |post| %>
-<%= link_to image_tag(post.image.url :small), post_path(post) %>
-<%= link_to post.title, post_path(post) %>
+<% @posts.each_slice(4) do |row| %>
+  <div class="row">
+    <% row.each do |post| %>
+      <div class="col-md-3">
+        <div class="thumbnail">
+          <%= link_to(image_tag(post.image.url :small), post_path(post)) %>
+          </div>
+          <div class="name">
+            <%= link_to post.user.name %>
+          </div>
+          <div class="caption">
+            <%= link_to post.title, post_path(post) %>
+        </div>
+      </div>
+    <% end %>
+  </div>
 <% end %>
-
-<div class="row">
-    <div class="col-md-4" style="background-color:aquamarine">.col-md-4</div>
-    <div class="col-md-4" style="background-color:pink">.col-md-4</div>
-    <div class="col-md-4" style="background-color:yellow">.col-md-4</div>
-</div>
