--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -13,5 +13,5 @@
           <% end %>
         <input class="search" type="text" name="search" placeholder="Search">
     </ul>
-  © 2017
+  #WATERLUST ©2017
 </footer>
