--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,5 @@
-<h2>Forgot your password?</h2>
-
+<h1>Password Reset</h1>
+<div class="form">
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
 
@@ -10,6 +10,8 @@
   <div class="form-actions">
     <%= f.button :submit, "Send me reset password instructions" %>
   </div>
+
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
