--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
-<h1>Sign up</h1>
+<h1>Sign Up</h1>
+<div class="form">
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
@@ -15,3 +16,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
