--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.description %></p>
 <p><%= image_tag @post.image.url(:medium) %><p>
-  <div id="glyphs">
+  <div class="glyphs">
   <span class="glyphicon glyphicon-heart" aria-hidden="true">11</span>
   <span class="glyphicon glyphicon-eye-open" aria-hidden="true">17</span>
   </div>
